--- a/sad-project/src/style.css
+++ b/sad-project/src/style.css
@@ -108,3 +108,33 @@ html,body,#root {
     text-align: center;
     color: red;
 }
+
+/* New user page button */
+#createAccountBtn {
+    background: #FF9800;
+    color: white;
+}
+#createAccountBtn:hover {
+    background: #FB8C00;
+}
+
+/* Success messages */
+#message.success {
+    color: green;
+    font-weight: bold;
+}
+
+/* Forgot Password button */
+#forgotPasswordBtn {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 10px;
+    background: #9c27b0;
+    color: white;
+}
+#forgotPasswordBtn:hover {
+    background: #8e24aa;
+}
