--- a/sad-project/src/style.css
+++ b/sad-project/src/style.css
@@ -68,22 +68,22 @@ html,body,#root {
 
 /*Login button */
 #loginBtn{
-    background: #4CAF50;
+    background: #b7931e;
     color: white;
 }
 
 #loginBtn:hover {
-    background: #45a049;
+    background: #b7931e;
 }
 
 /* Create new user button*/
 #createUserBtn {
-    background: #2196F3;
+    background: #d3820a;
     color: white;
 }
 
 #createUserBtn:hover {
-    background: #1976D2;
+    background: #d3820a;
 }
 
 #forgotPassword 
@@ -132,17 +132,17 @@ html,body,#root {
     cursor: pointer;
     border-radius: 5px;
     margin-top: 10px;
-    background: #9c27b0;
+    background: #aab807;
     color: white;
 }
 #forgotPasswordBtn:hover {
-    background: #8e24aa;
+    background: #99ce14;
 }
 
 /* logo*/
 .logo {
     display: block;
     margin: 0 auto 20px;
-    width: 200px;
+    width: 250px;
     height: auto;
 }
