Added logo and logout buttons to the different dashboards

--- a/sad-project/src/pages/Manager.css
+++ b/sad-project/src/pages/Manager.css
@@ -33,3 +33,15 @@
     color: black;
     font-size: 16px;
 }
+
+.header-center {
+    display: flex;
+    align-items: center;
+    gap: 60px; /* space between logo and profile pic */
+}
+
+.logo-pic {
+    width: 60px;   /* make it smaller than profile */
+    height: 60px;
+    object-fit: contain;
+}
