--- a/sad-project/src/style.css
+++ b/sad-project/src/style.css
@@ -3,7 +3,7 @@
 html,body,#root {
     margin: 0;
     padding: 0;
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
     background: #f4f4f4;
 }
@@ -11,10 +11,11 @@ html,body,#root {
 {
     font-family: Arial, sans-serif;
     width:100%;
-    height:100%;
+    min-height:100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px 0;
 }
 
 .login-container 
