--- a/sad-project/src/pages/AccountManagement.css
+++ b/sad-project/src/pages/AccountManagement.css
@@ -130,3 +130,33 @@ tr:hover {
   background-color: #f7941d !important;
   color: #fff !important;
 }
+
+
+/* Tooltip container */
+.tooltiptext {
+  visibility: hidden; /* Hidden by default */
+  opacity: 0;
+  background-color: #d0d0d0bb;
+  color: #fff;
+  font-size: 12px;
+  text-align: center;
+  padding: 5px 10px;
+  border-radius: 10px;
+  position: absolute;
+  top: 125%;
+  left: 50%;
+  min-width: 50px;
+  transform: translateX(-50%); /* Center the tooltip */
+  transition: opacity 0.3s; /* Smooth transition for appearance */
+}
+
+.button-container:hover .tooltiptext {
+  visibility: visible; /* Show on hover */
+  opacity: 1;
+}
+
+.button-container
+{
+  position: relative; 
+  display: inline-block;
+}
